[package]
name = "xtagger"
version = "0.1.0"
authors = ["Stefan Achatz <erazor_de@users.sourceforge.net>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/erazor-de/xtagger"
readme = "README.md"
keywords = ["xattr", "tag", "search"]
categories = ["command-line-utilities", "filesystem"]
description = """
Command line application for managing and searching tags stored in filesystem extended attributes
"""

[dependencies]
clap = { version = "3", features = ["derive"] }
glob = "0.3"
itertools = "0.10"
xtag = { path = "../xtag", version = "0.1.0" }
